# ComfyUI-MediaPipe-Vision

./: README.md  __init__.py  pyproject.toml
node_wrappers/common/: model_loader.py  universal_landmark_nodes.py
node_wrappers/face/detection/: face_detection.py  face_detection_visualization.py
node_wrappers/face/landmark/: blendshape.py  face_landmark_detection.py  face_landmark_detection_visualization.py  face_masking.py  head_pose.py  position.py  texture_warp.py
node_wrappers/face/stylization/: face_stylization.py
node_wrappers/hand/: delta.py
node_wrappers/hand/gesture/: gesture_visualiztion.py  guesture.py
node_wrappers/hand/landmark/: hand_landmark.py  hand_landmark_masking.py  hand_landmark_visualization.py  position.py
node_wrappers/pose/: pose_landmark_visualizer.py  position.py
